fixed bug with promotion message box display on Mobile Safari browser

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -790,6 +790,33 @@ $label-background-color: #46578D;
     }
 }
 
-.bugmap-campaign-overlay {background: url('../images/circle.png'); position:absolute;left:50%;top:50%;margin-left:-170px; margin-top:-150px;width:341px;height:301px;}
-.campaignMessageBox {background: url('../images/circle.png');width:341px;height:301px;box-shadow:none!important;border:none!important}
-.emptyMessageBox {background: url('../images/circle.png');width:341px;height:301px;box-shadow:none!important;border:none!important}
+.bugmap-campaign-overlay {
+  background-image: url('../images/circle.png');
+  background-position:center top;
+  background-repeat: no-repeat;
+  position:absolute;
+  left:50%;
+  top:50%;
+  margin-left:-160px;
+  margin-top:-150px;
+  width:320px;
+  height:301px;}
+
+.campaignMessageBox {
+  //background: url('../images/circle.png') no-repeat center center fixed;
+  background-image: url('../images/circle.png');
+  background-position:center top;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  overflow: auto;
+  width:320px;
+  height:301px;
+  box-shadow:none!important;
+  border:none!important
+}
+
+.x-msgbox {
+  min-width: 305px;
+  max-width: 305px;
+}
+.emptyMessageBox {background: url('../images/promotionCircle.png');width:320px;height:301px;box-shadow:none!important;border:none!important}
